--- a/Landing - Page/style.css
+++ b/Landing - Page/style.css
@@ -51,8 +51,10 @@ header{
     justify-content: space-evenly;
 }
 .Main-container .Content-container{
-    margin-top: 10%;
     width: 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 .Main-container .Content-container h1{
     font-size: 50px;
