--- a/Hyundai Cars/style.css
+++ b/Hyundai Cars/style.css
@@ -140,38 +140,40 @@
 .textBanner .Banner{
     width: 70%;
     height: 130px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
     margin: auto;
     background-color: #002C5F;
+    color: white;
 }
 .textBanner .Banner h3{
-    padding: 40px 0 0 0;
+    font-size: 17px;
     text-transform: uppercase;
 }
-.textBanner .Banner h3,h1{
-    color: white;
+.textBanner .Banner h1{
+    font-size: 30px;
 }
 .galleryContainer {
     width: 100%;
-    margin: 30px 0;
 }
 .galleryContainer .gallery{
     width: 70%;
-    height: 600px;
     margin: auto;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
 }
 .galleryContainer .gallery .boxs{
     width: 352px;
-    height: 400px;
-    background-color: aliceblue;
+
 }
 .galleryContainer .gallery .boxs #p1{
-    font-size: 14px;
+    font-size: 12px;
 }
 .galleryContainer .gallery .boxs #p2{
-    font-size: 20px;
+    font-size: 18px;
 }
 .bannerContiainer{
     width: 100%;
@@ -189,7 +191,8 @@
 #button{
     width: 100%;
     height: auto;
-    margin: 50px 0px;
+    margin: 50px auto;
+    
 }
 #button a{
     border: 1px solid #002C5F;
@@ -230,11 +233,12 @@
     transform: translate(-50%, -50%);
     top: 50%;
     left: 50%;
+    display: flex;
+    align-items: center;
     visibility: hidden;
     transition: 1ms;
 }
 .imageContainer .images .boxs .msg p{
-    padding: 50px 25px;
     line-height: 25px;
     text-align: center;
     font-size: 17px;
